--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -9,6 +9,9 @@ defaults:
   replay_online: False
   eval_dir: ''
   filter: '.*'
+  back_type: None, 
+  back_train: None,
+  back_eval: None
 
   jax:
     platform: gpu
@@ -52,7 +55,7 @@ defaults:
     atari: {size: [64, 64], repeat: 4, sticky: True, gray: False, actions: all, lives: unused, noops: 0, resize: opencv}
     dmlab: {size: [64, 64], repeat: 4, episodic: True}
     minecraft: {size: [64, 64], break_speed: 100.0}
-    dmc: {size: [64, 64], repeat: 2, camera: -1, back_type: None, back_path: None, total_frames: 1000, grayscale: False}
+    dmc: {size: [64, 64], repeat: 2, camera: -1, grayscale: False}
     loconav: {size: [64, 64], repeat: 2, camera: -1}
 
   # Agent
